--- a/pseudo-element.css
+++ b/pseudo-element.css
@@ -14,13 +14,13 @@ body {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    text-align: left; /* Mengatur text align ke kiri */
+    text-align: left; 
 }
 
 .profile-card::before {
     content: 'ini before' ;
     position: absolute;
-    top: -30px; /* Jarak lebih jauh dari teks */
+    top: -30px; 
     left: 50%;
     transform: translateX(-50%);
     width: 60px;
